--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,15 @@
 <template>
-  <require from="./cities"></require>
-  <require from="./person"></require>
-  <div class="ui container">
-    <div class="ui segment" style="margin:0">
+  <!-- <require from="./cities"></require> -->
+  <!-- <require from="./person"></require> -->
+  <!-- <div class="ui container"> -->
+    <!-- <div class="ui segment" style="margin:0">
       <h1 class="ui center aligned header">${message}</h1>
-    </div>
+    </div> -->
     <!-- <cities></cities> -->
-    <person></person>
-  </div>
+    <!-- <person></person> -->
+    <!-- <a route-href="person">Person</a> -->
+    <router-view></router-view>
+  <!-- </div> -->
   <style>
     .titulo {
       color: red;
@@ -19,6 +21,10 @@
     }
     .titulo, .cap{
       font-weight: bold;
+    }
+    .rayado{
+      border: 1px solid rgba(34,36,38,.15);
+      border-radius: 0.28571429rem;
     }
   </style>
 </template>
