feat: search component

--- a/src/cities.html
+++ b/src/cities.html
@@ -1,24 +1,14 @@
 <template>
+  <require from="./resources/components/search/search"></require>
   <div class="ui container">
     <div class="ui segment" style="margin:0">
       <h1 class="ui center aligned header">${cityMsg}</h1>
       <a route-href="person">Person</a>
+      <a route-href="prueba">Prueba</a>
     </div>
     <div class="ui segment" style="display:flex; justify-content:space-between">
-      <!-- <div class="ui row"> -->
-        <!-- <div class="eigth wide center aligned column"> -->
-          <button class="ui blue button" click.delegate="onlyCapitals()">${isVisible ? "Todos" : "Capitais"}</button>
-        <!-- </div> -->
-      <!-- </div> -->
-      <!-- <div class="ui form eigth wide center aligned column"> -->
-        <div class="ui icon input ${!isEmpty ? 'rayado': ''}">
-          <input type="text" placeholder="Filtrar" value.bind="search" css="${!isEmpty ? 'border: none' : ''}">
-          <i class="search icon" show.bind="isEmpty"></i>
-          <button show.bind="!isEmpty" class="ui icon button" click.delegate="emptyText(search)" style="background:none">
-            <i class="close icon"></i>
-          </button>
-        </div>
-      <!-- </div> -->
+        <button class="ui blue button" click.delegate="onlyCapitals()">${isVisible ? "Todos" : "Capitais"}</button>
+        <search hint="Filtrar" field_search.bind="search"></search>
     </div>
     
     <table class="ui celled striped table">
